<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    tools:context=".MainActivity">

   <FrameLayout
       android:id="@+id/fl_drawing_view_container"
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:padding="1dp"
       android:background="@drawable/background_drawing_view_layout"
       app:layout_constraintBottom_toTopOf="@+id/all_paint_colors"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
      >
      
      <ImageView
          android:id="@+id/iv_background"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:contentDescription="@string/screen"
          android:scaleType="centerCrop"
          android:src="@drawable/image"/>

      <com.example.drawingapp.DrawingView
          android:id="@+id/drawing_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="20dp"
          android:background="#80FFFFFF" />

   </FrameLayout>

   <LinearLayout
       android:id="@+id/all_paint_colors"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginBottom="20dp"
       android:layout_marginTop="10dp"
       app:layout_constraintBottom_toTopOf="@+id/ll_action_buttons"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/fl_drawing_view_container">

      <ImageButton
          android:id="@+id/imageButton"
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:background="@color/red"
          android:onClick="paintClicked"
          android:contentDescription="@string/brush"
          android:src="@drawable/pallet_normal"
          android:tag="@color/red" />

      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:background="@color/yellow"
          android:onClick="paintClicked"
          android:contentDescription="@string/brush"
          android:src="@drawable/pallet_normal"
          android:tag="@color/yellow" />

      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:background="@color/skin"
          android:onClick="paintClicked"
          android:contentDescription="@string/brush"
          android:src="@drawable/pallet_normal"
          android:tag="@color/skin" />

      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:background="@color/black"
          android:onClick="paintClicked"
          android:contentDescription="@string/brush"
          android:src="@drawable/pallet_normal"
          android:tag="@color/black" />

      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:background="@color/green"
          android:onClick="paintClicked"
          android:contentDescription="@string/brush"
          android:src="@drawable/pallet_normal"
          android:tag="@color/green" />

      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:background="@color/blue"
          android:onClick="paintClicked"
          android:contentDescription="@string/brush"
          android:src="@drawable/pallet_normal"
          android:tag="@color/blue" />

      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:background="@color/lollipop"
          android:onClick="paintClicked"
          android:contentDescription="@string/brush"
          android:src="@drawable/pallet_normal"
          android:tag="@color/lollipop" />

      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:background="@color/random"
          android:onClick="paintClicked"
          android:contentDescription="@string/brush"
          android:src="@drawable/pallet_normal"
          android:tag="@color/random" />

      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:background="@color/white"
          android:onClick="paintClicked"
          android:contentDescription="@string/brush"
          android:src="@drawable/pallet_normal"
          android:tag="@color/white" />
   </LinearLayout>

   <LinearLayout
       android:id="@+id/ll_action_buttons"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="horizontal"
       android:layout_margin="20dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">
      <ImageButton
          android:id="@+id/ib_gallery"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_margin="5dp"
          android:contentDescription="@string/brush"
          android:scaleType="fitXY"
          android:src="@drawable/gallery" />
      <ImageButton
          android:id="@+id/ib_undo"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_margin="5dp"
          android:contentDescription="@string/undo"
          android:scaleType="fitXY"
          android:src="@drawable/undo" />
      <ImageButton
          android:id="@+id/ib_redo"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_margin="5dp"
          android:contentDescription="@string/redo"
          android:scaleType="fitXY"
          android:src="@drawable/redo" />
      <ImageButton
          android:id="@+id/ib_brush"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_margin="5dp"
          android:contentDescription="@string/gallery"
          android:scaleType="fitXY"
          android:src="@drawable/brush" />
      <ImageButton
          android:id="@+id/ib_save"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_margin="5dp"
          android:contentDescription="@string/save"
          android:scaleType="fitXY"
          android:src="@drawable/save" />
   </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>